<resources>
    <string name="app_name">El Huevo o La Gallina</string>

    <string name="action_settings">Settings</string>

    <string name="activity_main_question">Probando la primer pregunta. Probando la primer pregunta. Probando la primer pregunta. Probando la primer pregunta.</string>

    <string name="activity_congrats_ganaste">¡GANASTE!</string>
    <string name="activity_congrats_respondiste10">Has respondido 10 preguntas en menos de 20 segundos.</string>
    <string name="activity_congrats_btn_compartir">COMPARTIR CON AMIGOS</string>
    <string name="activity_congrats_btn_vuelve">¡VUELVE A JUGAR!</string>

    <string name="activity_loose_perdiste">¡PERDISTE!</string>
    <string name="activity_loose_no_respondiste10">No respondiste 10 preguntas en menos de 20 segundos.</string>

    <string name="activity_login_btn_facebook">Ingresa con Facebook</string>
    <string name="activity_login_btn_google">Ingresa con Google</string>
    <string name="activity_login_btn_anonimo">Ingresa como Anónimo</string>

    <string name="activity_login_bienvenido">¡BIENVENIDO!</string>
    <string name="activity_login_ingresar_usuario">Para jugar debes ingresar con tu usuario</string>

    <string name="activity_welcome_hello">¡HOLA, %1$s!</string>
    <string name="activity_welcome_btn_start">¡EMPEZAR A JUGAR!</string>
    <string name="activity_welcome_text">Responde 10 preguntas correctamente en menos de 20 segundos.</string>


    <string name="facebook_app_id">759304170844236</string>
    <string name="ad_unit_id">ca-app-pub-7993377819754702/7701769078</string>
</resources>
