<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/activity_login_imageview_tira_violeta"
        android:src="@drawable/tira_violeta"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_login_imageview_actionbar"
        android:src="@drawable/actionbar"
        android:layout_alignBottom="@+id/activity_login_imageview_logo"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:id="@+id/activity_login_imageview_logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_login_imageview_huevo_gallina_titulo"
        android:src="@drawable/huevo_gallina_titulo"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/activity_login_imageview_logo"
        android:layout_toEndOf="@+id/activity_login_imageview_logo"
        android:paddingRight="10dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/activity_login_imagebutton_boton_facebook"
        android:background="@drawable/boton_facebook"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/activity_login_imageview_tira_violeta"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/activity_login_imagebutton_boton_anonimo"
        android:background="@drawable/boton_anonimo"
        android:layout_below="@+id/activity_login_imagebutton_boton_facebook"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_login_btn_facebook"
        android:id="@+id/activity_login_textview_facebook"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/activity_login_imagebutton_boton_facebook"
        android:layout_alignTop="@+id/activity_login_imagebutton_boton_facebook"
        android:textSize="22dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_login_btn_google"
        android:id="@+id/activity_login_textview_anonimo"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignTop="@+id/activity_login_imagebutton_boton_anonimo"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/activity_login_imagebutton_boton_anonimo"
        android:textSize="21dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_login_bienvenido"
        android:id="@+id/activity_login_textview_tittle_top_bienvenido"
        android:layout_below="@+id/activity_login_imageview_actionbar"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="35dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_login_ingresar_usuario"
        android:id="@+id/activity_login_textview_tittledown_ingresa_usuario"
        android:textSize="18dp"
        android:layout_below="@+id/activity_login_textview_tittle_top_bienvenido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarSplash"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>