<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LooseActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/activity_loose_imageview_tira_violeta"
        android:src="@drawable/tira_violeta"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_loose_imageview_actionbar"
        android:src="@drawable/actionbar"
        android:layout_alignBottom="@+id/activity_loose_imageview_logo"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:id="@+id/activity_loose_imageview_logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_loose_imageview_reloj"
        android:src="@drawable/reloj20"
        android:layout_alignBottom="@+id/activity_loose_imageview_tira_violeta"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="100dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_loose_imageview_huevo_gallina_titulo"
        android:src="@drawable/huevo_gallina_titulo"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/activity_loose_imageview_logo"
        android:layout_toEndOf="@+id/activity_loose_imageview_logo"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_loose_perdiste"
        android:id="@+id/activity_loose_textview_perdiste"
        android:textStyle="bold"
        android:textSize="45dp"
        android:textColor="#ff0000"
        android:textIsSelectable="false"
        android:layout_below="@+id/activity_loose_imageview_reloj"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_loose_no_respondiste10"
        android:id="@+id/activity_loose_textview_no_respondiste"
        android:layout_below="@+id/activity_loose_textview_perdiste"
        android:layout_centerHorizontal="true"
        android:textColor="#730ead"
        android:textSize="22dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_loose_imageview_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@android:drawable/ic_menu_help"
        android:layout_above="@+id/activity_loose_textview_perdiste"
        android:layout_alignLeft="@+id/activity_loose_imageview_logo"
        android:layout_alignStart="@+id/activity_loose_imageview_logo"
        android:layout_marginLeft="10dp"
        app:border_width="5dp"
        app:border_color="#730EAD" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting1"
        android:src="@drawable/answer_1_waiting"
        android:layout_alignTop="@+id/activity_loose_imageview_answer_waiting2"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting2"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting2" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting2"
        android:src="@drawable/answer_2_waiting"
        android:layout_alignTop="@+id/activity_loose_imageview_answer_waiting3"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting3"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting3" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting3"
        android:src="@drawable/answer_3_waiting"
        android:layout_alignTop="@+id/activity_loose_imageview_answer_waiting4"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting4"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting4" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting4"
        android:src="@drawable/answer_4_waiting"
        android:layout_alignTop="@+id/activity_loose_imageview_answer_waiting5"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting5"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting5" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting5"
        android:src="@drawable/answer_5_waiting"
        android:layout_above="@+id/activity_loose_imageview_answer_waiting10"
        android:layout_alignLeft="@+id/activity_loose_imageview_answer_waiting10"
        android:layout_alignStart="@+id/activity_loose_imageview_answer_waiting10" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting6"
        android:src="@drawable/answer_6_waiting"
        android:layout_alignTop="@+id/activity_loose_imageview_answer_waiting7"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting7"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting7" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting7"
        android:src="@drawable/answer_7_waiting"
        android:layout_alignTop="@+id/activity_loose_imageview_answer_waiting8"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting8"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting8" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting8"
        android:src="@drawable/answer_8_waiting"
        android:layout_alignTop="@+id/activity_loose_imageview_answer_waiting9"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting9"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting9" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting9"
        android:src="@drawable/answer_9_waiting"
        android:layout_below="@+id/activity_loose_imageview_answer_waiting5"
        android:layout_toLeftOf="@+id/activity_loose_imageview_answer_waiting10"
        android:layout_toStartOf="@+id/activity_loose_imageview_answer_waiting10" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/activity_loose_imageview_answer_waiting10"
        android:src="@drawable/answer_10_waiting"
        android:layout_alignBottom="@+id/activity_loose_imageview_avatar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="22dp" />

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_loose_textview_no_respondiste"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/activity_loose_imagebutton_boton_volver_a_jugar"
                    android:background="@drawable/boton_volver_a_jugar"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/activity_loose_imagebutton_boton_compartir"
                    android:layout_alignEnd="@+id/activity_loose_imagebutton_boton_compartir"
                    android:layout_alignLeft="@+id/activity_loose_imagebutton_boton_compartir"
                    android:layout_alignStart="@+id/activity_loose_imagebutton_boton_compartir"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/activity_congrats_btn_compartir"
                    android:id="@+id/activity_loose_textview_btncompartir"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@+id/activity_loose_imagebutton_boton_compartir"
                    android:layout_alignTop="@+id/activity_loose_imagebutton_boton_compartir"
                    android:textSize="22dp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/activity_loose_imagebutton_boton_compartir"
                    android:background="@drawable/boton_compartir"
                    android:layout_above="@+id/activity_loose_imagebutton_boton_volver_a_jugar"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/activity_congrats_btn_vuelve"
                    android:id="@+id/activity_loose_textview_btn_volver_a_jugar"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_alignTop="@+id/activity_loose_imagebutton_boton_volver_a_jugar"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@+id/activity_loose_imagebutton_boton_volver_a_jugar"
                    android:textSize="21dp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

    </FrameLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>